added test to workflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,3 +84,16 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       run: terraform apply -auto-approve 
+
+  test:
+    needs: terraform
+    name: Cypress run
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v4.2.0
+        with:
+          spec: cypress/e2e/spec.cy.js
